# career_caddy

./: .env.example  .flake8  .gitignore  .gitmodules  .ok  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.develop.yml  docker-compose.prod.yml  docker-compose.yml  import_resumes.sh.example  notes.org  notes_archive.org  requirements.txt  secrets.yml.example  todo.org  todo.org_archive
.github/workflows/: ci.yml  deploy.yml  publish-arm64-dev.yml  rebuild-base-images.yml  smoke.yml
cli/: __init__.py  cli.py  convert_resume.py  extract_job.py  generate_cover_letter.py  generate_summary.py  load_resume.py  load_user.py  parse_job.py  score_job.py  score_job_for_user.py  score_resume.py  test_linkedin.py
dagger/: dagger.json
dagger/src/: career_caddy_pipeline.py  main.py  pyproject.toml
deploy/sudoers.d/: deploy-docker-proxy-cleanup
lib/: browser.py  select_service.py
lib/database/: db_handler.py
lib/exports/: orgmode_export.py
lib/extractors/: linkedin.py
lib/handlers/: chatgpt_handler.py  db_handler.py  job_handler.py  user_handler.py
lib/models/: __init__.py  base.py  company.py  job.py  job_post.py  resume.py  score.py  scrape.py  user.py
lib/outputs/: orgmode.py
lib/parsers/: __init__.py  base_parser.py  example_parser.py  generic.py  generic_parser.py  linkedin_parser.py
lib/scoring/: job_scorer.py
lib/scrapers/: __init__.py  generic.py  generic_scraper.py  linkedin_scraper.py  parser_creation.py
lib/scrappers/: generic.py  (+1 more)
scripts/: doctor.sh
templates/: job_parser_prompt.j2  job_scorer_prompt.j2
tests/: test_parse_eval.py
(+5 files in other folders)
