[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "career-caddy-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dagger-io",
]

[tool.setuptools]
py-modules = ["main"]

[project.entry-points."dagger.mod"]
main_object = 'main:CareerCaddy'
