[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "career-caddy-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dagger-io",
]

[tool.setuptools]
py-modules = ["career_caddy_pipeline"]

[project.entry-points."dagger.mod"]
main_object = 'career_caddy_pipeline:CareerCaddy'
